@startuml Component Interfaces

component temporal {
}

() workflowClient
() scheduleClient
() workflowServiceStubs


workflowServiceStubs <|-u- temporal
workflowClient <|-u- temporal
scheduleClient <|-u- temporal


package "worker" as workerGroup {
    component worker{
    }

    interface CommunicationWorkflow {
        + Map<String, String> sendCommunication(Map<String, String> payload)
    }

    interface GetPreferencesActivity {
        + Preferences getPreferences()
    }

    interface GetGatewayByIdActivity {
        + String getGatewayEndpointURL(String gatewayId)
    }

    interface SendMessageToGatewayActivity {
        + Map<String, String> invokeGateway(String userId, String workflowRunId, String gatewayUrl, Preferences preferences)
    }

    worker --|> CommunicationWorkflow
    CommunicationWorkflow --> GetPreferencesActivity
    CommunicationWorkflow --> SendMessageToGatewayActivity
    CommunicationWorkflow --> GetGatewayByIdActivity
}

temporal --> CommunicationWorkflow: uses

@enduml
